# roswell

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml  typos.toml  why3find.json
.github/workflows/: ci.yml  wheels.yml
docs/: RT.md
embedded/: README.md
embedded/demo/: run_demo.sh  wheel_node.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dynamic_decode.rs  idl_parser.rs  mcap_reader.rs  msg_parser.rs
hil-renode/: Cargo.toml  README.md
hil-renode/.cargo/: config.toml
hil-renode/fw/: Cargo.toml  build.rs  memory.x  pl011_m0.repl
hil-renode/fw/src/: main.rs  msgs_nostd.rs  uart.rs
hil-renode/src/: lib.rs
hil-renode/tests/: raw_dds_probe.rs  tunnel_hil.rs  wheel_firmware_demo.rs
python/: README.md  hatch_build.py  pyproject.toml
python/benchmarks/: README.md  _harness.py  bench_cross_rclpy.py  bench_cross_roswell.py  bench_rclpy.py  bench_roscmp.py  bench_roswell.py  fastdds_no_shm.xml
python/roscmp/: __init__.py  __init__.pyi  _ffi.py  _interfaces.py  _types.py  bag.py  stubgen.py
python/roswell/: __init__.py  __init__.pyi  _ffi.py  _interfaces.py  _types.py  bag.py  stubgen.py
python/tests/: bench_pointcloud.py  conftest.py  test_action_server.py  test_actions.py  test_bag.py  test_handles.py  test_loopback.py  test_no_numpy.py  test_param_arrays.py  test_parameters.py  test_repr.py  test_stubgen.py  test_tf.py  test_timers.py  test_workspace.py
python/tests/fixtures/test_msgs/msg/: BigCloud.msg  Sample.msg
python/tests/fixtures/ws/robot_msgs/msg/: Detection.msg
python/tests/fixtures/ws/sensor_pkg/msg/: Reading.msg
python/tests/fixtures/ws_install/share/foo_msgs/msg/: Beacon.msg
roscmp-build/: Cargo.toml  README.md
roscmp-build/src/: lib.rs
roscmp-build/tests/: build_integration.rs
roscmp-build/tests/fixture/: Cargo.toml  build.rs
roscmp-build/tests/fixture/src/: main.rs
roscmp-c/: Cargo.toml
roscmp-c/include/: roscmp.h
roscmp-c/src/: handle.rs  lib.rs  tests.rs
roscmp-dds/: Cargo.toml  README.md  interop_test.sh  turtle_sim_test.sh
roscmp-dds/src/: action.rs  async_rt.rs  codec.rs  discovery.rs  lib.rs  lifecycle.rs  log.rs  msgs.rs  node.rs  parameters.rs  qos.rs  raw.rs  service.rs  tf.rs  time.rs  transport.rs  tunnel.rs  type_description.rs
roscmp-dds/tests/: action_client_loopback.rs  action_server_loopback.rs  discovery_loopback.rs  dynamic_byte_equality.rs  node_executor.rs  node_sim_time.rs  parameter_client_loopback.rs  qos_events_loopback.rs  raw_record_loopback.rs  raw_service_loopback.rs  tokio_loopback.rs  tunnel_core_equivalence.rs  xcdr2_dynamic.rs
roscmp-tunnel-core/: Cargo.toml
roscmp-tunnel-core/src/: lib.rs
roscmp-verify/: Cargo.toml
roscmp-verify/src/: lib.rs
roswell-build/: Cargo.toml  README.md
roswell-build/src/: lib.rs
roswell-build/tests/: build_integration.rs
roswell-build/tests/fixture/: Cargo.toml  build.rs
roswell-build/tests/fixture/src/: main.rs
roswell-c/: Cargo.toml
roswell-c/include/: roswell.h
roswell-c/src/: handle.rs  lib.rs  tests.rs
roswell-ros2-compat/: Cargo.toml  README.md  interop_test.sh  turtle_sim_test.sh
roswell-ros2-compat/src/: action.rs  codec.rs  diagnostics.rs  discovery.rs  graph.rs  lib.rs  log.rs  msgs.rs  node.rs  qos.rs  raw.rs  service.rs  tf.rs  transport.rs  tunnel.rs
roswell-ros2-compat/tests/: action_client_loopback.rs  action_server_loopback.rs  discovery_loopback.rs  dynamic_byte_equality.rs  msgs_freshness.rs  node_executor.rs  node_sim_time.rs  parameter_client_loopback.rs  qos_events_loopback.rs  raw_loaned_loopback.rs  raw_record_loopback.rs  raw_service_loopback.rs  tokio_loopback.rs  tunnel_core_equivalence.rs  xcdr2_dynamic.rs
roswell-tunnel-core/: Cargo.toml
roswell-tunnel-core/src/: lib.rs
roswell-verify/: Cargo.toml
roswell-verify/src/: lib.rs
samples/action_msgs/msg/: GoalInfo.msg
samples/action_msgs/srv/: CancelGoal.srv
samples/demo_msgs/msg/: Telemetry.msg
samples/diagnostic_msgs/msg/: DiagnosticArray.msg  DiagnosticStatus.msg
samples/geometry_msgs/msg/: PoseStamped.msg  Quaternion.msg  TransformStamped.msg
samples/lifecycle_msgs/msg/: State.msg  Transition.msg
samples/rcl_interfaces/msg/: FloatingPointRange.msg  IntegerRange.msg  ListParametersResult.msg  Log.msg  Parameter.msg  ParameterDescriptor.msg  ParameterEvent.msg  ParameterValue.msg  SetParametersResult.msg
samples/rcl_interfaces/srv/: DescribeParameters.srv  GetParameterTypes.srv  GetParameters.srv  ListParameters.srv  SetParameters.srv  SetParametersAtomically.srv
samples/rmw_dds_common/msg/: NodeEntitiesInfo.msg  ParticipantEntitiesInfo.msg
samples/sensor_msgs/msg/: Imu.msg
samples/type_description_interfaces/msg/: Field.msg  FieldType.msg  IndividualTypeDescription.msg  TypeDescription.msg  TypeSource.msg
samples/type_description_interfaces/srv/: GetTypeDescription.srv
scripts/: bench-cross-host.sh  bench-vs-rclpy.sh  build-linux-wheel.sh  check.sh  fuzz.sh  miri.sh  regen-msgs.sh  verify-rt.sh
src/: ast.rs  cdr.rs  cdr_runtime.rs  cdr_runtime_nostd.rs  dynamic.rs  idl.rs  ir.rs  lib.rs  main.rs  parser.rs  resolve.rs  typehash.rs  workspace.rs
src/codegen/: c.rs  mod.rs  python.rs  rust.rs  rust_nostd.rs
tests/: cdr_tests.rs  dynamic_decode_regression.rs  ffi_tests.rs  idl_tests.rs  layout_tests.rs  nostd_codegen_tests.rs  parser_tests.rs  service_tests.rs  typehash_tests.rs
verif/roscmp_verify_rlib/next_fire_after/: proof.json
verif/roscmp_verify_rlib/pad_to/: proof.json
verif/roscmp_verify_rlib/round_up/: proof.json
verif/roswell_verify_rlib/plan_enqueue/: proof.json
