[package]
name = "roscmp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
nom = "8.0.0"
sha2 = "0.11.0"
# The machine-checked pure-arithmetic cores (panic-freedom + functional
# contracts proven with Creusot). `dynamic::round_up` delegates here; the
# equivalence test pins the embedded CDR padding formula to its verified twin.
# A tiny in-workspace crate with no external deps. See docs/RT.md.
roscmp-verify = { path = "roscmp-verify", version = "0.1.0" }

[lints]
workspace = true

[workspace]
members = [".", "roscmp-dds", "roscmp-c", "roscmp-verify", "roscmp-tunnel-core", "roscmp-build"]
# `fuzz/` is a detached cargo-fuzz crate (nightly + libfuzzer only); keep it out
# of the stable `--workspace` gate. See fuzz/Cargo.toml.
exclude = ["fuzz", "hil-renode"]

[workspace.lints.rust]
# `--cfg creusot` is set by the Creusot compiler under `cargo creusot`; register
# it so the normal (pedantic, -D warnings) gate does not flag the gated `use`s.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Curated allows — intentional or noise for this codebase:
missing_errors_doc = "allow"       # app-level; errors are self-describing
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
format_push_string = "allow"       # codegen builds source by appending
wildcard_imports = "allow"         # IR/AST re-exports
enum_glob_use = "allow"            # `use Prim::*` etc. in match arms
doc_markdown = "allow"             # ROS/type names in prose
float_cmp = "allow"                # exact round-trip equality in tests
# CDR (de)serialization deliberately reinterprets integer widths/signs:
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
