[package]
name = "roscmp-build"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Generate roscmp Rust message bindings from build.rs (prost-build pattern)"

[dependencies]
# The compiler core: parse/resolve/codegen for ROS interface files.
roscmp = { path = ".." }

[lints]
workspace = true
