[package]
name = "roscmp-verify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# Pure, self-contained real-time cores extracted from roscmp's hot paths so
# they can be machine-checked with Creusot (panic-freedom + functional
# contracts) while remaining THE production implementation the rest of the
# workspace calls. No external runtime dependencies.
#
# `creusot-std` supplies the `requires`/`ensures`/`invariant`/`variant` macros
# and is pulled in ONLY under the opt-in `verify` feature (which `cargo creusot`
# enables). Normal builds compile plain Rust with the contracts erased, so this
# crate adds no always-on dependency to the workspace. See docs/RT.md.
[dependencies]
creusot-std = { version = "0.13.0-dev", optional = true }

[features]
verify = ["dep:creusot-std"]

[lints]
workspace = true
