[package]
name = "roswell-hil-fw"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "no_std Cortex-M firmware that speaks the roswell tunnel wire protocol, for Renode HIL tests"

[[bin]]
name = "tunnel_selfcheck"
path = "src/main.rs"

[features]
# Adds a PL011 UART serve loop so a host bridge can round-trip tunnel frames.
uart = []

[dependencies]
cortex-m-rt = "0.7"
roswell-tunnel-core = { path = "../../roswell-tunnel-core" }
