# Compile-and-run fixture for roscmp-build's integration test. The empty
# [workspace] table detaches it from the repo workspace: it is built by
# `tests/build_integration.rs` via a nested cargo invocation, exactly the way an
# external user would consume roscmp-build.
[package]
name = "roscmp-build-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
roscmp-dds = { path = "../../../roscmp-dds" }

[build-dependencies]
roscmp-build = { path = "../.." }

[workspace]
