# Compile-and-run fixture for roswell-build's integration test. The empty
# [workspace] table detaches it from the repo workspace: it is built by
# `tests/build_integration.rs` via a nested cargo invocation, exactly the way an
# external user would consume roswell-build.
[package]
name = "roswell-build-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
roswell-ros2-compat = { path = "../../../roswell-ros2-compat" }

[build-dependencies]
roswell-build = { path = "../.." }

[workspace]
